[company]feat: gRPC gateway
