# services/company/internal/grpc/structs/structs.go
@@ -1,0 +1,5 @@
+package structs
+
+type CompanyRequest struct {
+	CompanyID int64 `validate:"required,min=0"`
+}
